--- a/Frontend/Cantine/src/assets/styles/new-meal.component.scss
+++ b/Frontend/Cantine/src/assets/styles/new-meal.component.scss
@@ -1,79 +1,78 @@
-
+h2{
+  margin-top: -4vh;
+}
 .first-container {
-  margin:6vh auto ;
+  margin: 6vh auto;
 
-  .form-group {
-    margin: 1vh 0 1vh 0;
-  }
-
-  .second{
-    border: 1px  solid #ccc;
+  .second {
+    border: 1px solid #ccc;
     border-radius: 20px;
     box-shadow: 1px 1px 1px 1px #ccc;
   }
 
   textarea {
-      height: 15vh;
-  }
-  .form-container{
-
-       position: relative;
-      mat-icon{
-        position: absolute;
-        top: 2vh;
-        left: 94%;
-      }
-
-
-
-
+    height: 8vh;
   }
 
-  mat-radio-button{
+  .form-container {
 
-      margin: 0 1vw 0 1vw;
+    position: relative;
+
+    mat-icon {
+      position: absolute;
+      top: 2vh;
+      left: 94%;
+    }
+
+
+  }
+
+  mat-radio-button {
+
+    margin: 0 1vw 0 1vw;
     font-size: 1.2em;
   }
 
-  mat-radio-group{
+  mat-radio-group {
 
-    span{
+    span {
 
-         font-weight: bold;
-          color: black;
-        cursor: pointer;
-        border: 1px  solid #ccc;
-        padding: 12px;
-        border-radius: 5px;
+      font-weight: bold;
+      color: black;
+      cursor: pointer;
+      border: 1px solid #ccc;
+      padding: 12px;
+      border-radius: 5px;
 
     }
+
     span:hover {
       background-color: rgba(222, 214, 193, 0.48);
     }
 
   }
 
-   .btns {
-        margin-top: 30px;
+  .btns {
+    margin-top: 30px;
 
-     position: relative;
+    position: relative;
 
-       span{
-         position: absolute;
-            top: 1vh;
-            left: 5%;
-         cursor: pointer;
-         color: #004a9f;
+    span {
+      position: absolute;
+      top: 1vh;
+      left: 5%;
+      cursor: pointer;
+      color: #004a9f;
 
-       }
-         span:hover {
-            color: #002b5c;
-         }
+    }
 
-   }
+    span:hover {
+      color: #002b5c;
+    }
+
+  }
 
 }
-
 
 
 @media (max-width: 992px) {
@@ -81,6 +80,7 @@
     .second {
       width: 100%;
     }
+
     .form-container {
       mat-icon {
         top: 1vh;
@@ -89,4 +89,4 @@
 
     }
   }
-  }
+}
