update admin   meals  management

--- a/Frontend/Cantine/src/app/admin/meals/update-meal/update-meal.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/update-meal/update-meal.component.html
@@ -3,7 +3,7 @@
         <div class="container second">
             <div class="row">
                 <div class="text-center">
-                    <img alt="logo" class="form-logo" src="../../../../assets/images/logo.png" width="80px">
+                    <img alt="logo" class="form-logo" src="../../../../assets/images/logo.png" width=   "80px">
                     <h4 class="mt-1 mb-5 pb-1"> Cantinière</h4>
                 </div>
                 <h1 class="center"> Modifier  Le  Plat </h1>
@@ -155,8 +155,8 @@
                         <div class="form-group">
                             <label for="image"> Choisissez une image pour modifier  celle  du plat </label>
 
-                            <input class="input-group-prepend"
-                                   [ngClass]="{ 'is-invalid': submitted && f['image'].errors }" class="form-control"
+                            <input class="input-group-prepend form-control"
+                                   [ngClass]="{ 'is-invalid': submitted && f['image'].errors }"
                                    formControlName="image"
                                    placeholder="Le prix du  Plat "
                                    type="file"
