--- a/Frontend/Cantine/src/app/admin/menus/new-menu/new-menu.component.html
+++ b/Frontend/Cantine/src/app/admin/menus/new-menu/new-menu.component.html
@@ -6,7 +6,7 @@
                     <img alt="logo" class="form-logo" src="../../../../assets/images/logo.png" width="80px">
                     <h4 class="mt-1 mb-5 pb-1"> Cantinière</h4>
                 </div>
-                <h1 class="center"> Ajouter un Plat </h1>
+                <h1 class="center"> Ajouter un Menu </h1>
 
                 <div class="register-form ">
                     <form [formGroup]="newMenu">
