--- a/Frontend/Cantine/src/app/admin/menus/all-menus/all-menus.component.html
+++ b/Frontend/Cantine/src/app/admin/menus/all-menus/all-menus.component.html
@@ -1,49 +1,49 @@
 <div class="center" style="margin: 20px">
-    <button class="btn" (click)="addMenu()">Ajouter un  Menu </button>
+    <button class="btn"  (click)="addMenu()" >Ajouter un Menu</button>
 </div>
 
-<div class="container" *ngIf="(menus$ | async) as menus; else loadingTemplate" >
+<ng-container *ngIf="(menus$ | async) as meals; else noMenu">
+    <div *ngIf="meals.length > 0; else noMenu"></div>
+</ng-container>
+
+
+<div class="container">
     <div class="row">
-      <div *ngFor="let menu of menus$ | async " class="col m4 s12">
-            <div>
-                <div class="card horizontal ">
-                    <img [src]="menu.image" height="190px" width="40%"/>
+        <div *ngFor="let menu of menus$ | async " class="col-md-4">
+            <div class="card horizontal ">
+                <div class="center {{ menuAvailableToString(menu.status) | foodAvailable }}">
+                    <img [src]="menu.image" height="190px" width="40%" alt=""/>
 
                     <div class="card-stacked">
                         <div class="card-content">
-                            <p> plat :   {{menu.label}}</p>
-                            <p> description : {{menu.description}}</p>
+                            <p><span class="meal-title">{{menu.label}}</span></p>
                             <p> prix : {{menu.price | euroSymbol }}  </p>
-                            <p><span *ngIf="menu.status == 1">  Disponible  </span><span *ngIf="menu.status == 0 ">  Pas  Disponible  </span>
+                            <p>quantity : {{menu.quantity}} </p>
+                            <p> description : {{menu.description}}</p>
+                            <p><span *ngIf="menu.status == 1">  Disponible  </span><span
+                                    *ngIf="menu.status == 0 ">  Pas  Disponible  </span>
                             </p>
                         </div>
-                        <p  class="center" style="color: #004a9f">   voir Plus  </p>
-
-                        <div>
-                            <button class="btn" (click)="updateMenu(menu.id)" > Modifier Le Menus </button>
-
-                        </div>
+                    </div>
+                    <div style="margin: 15px">
+                        <button class="btn" (click)="updateMenu(menu.uuid)"> Modifier Le Plat</button>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
-
-<ng-template #loadingTemplate >
-    <!-- Afficher le spinner ici pendant le chargement -->
-    <div class="spinner-container">
-        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+<ng-template #noMenu>
+    <div class="center" style=" padding: 12%; height: 50%;">
+        <h2> Aucun plat disponible</h2>
     </div>
-
 </ng-template>
-
 <style>
-    .spinner-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 15vh;
+    .meal-title {
+        font-size: 20px;
+        font-weight: bold;
     }
 </style>
+
