--- a/Frontend/Cantine/src/app/admin/menus/update-menu/update-menu.component.html
+++ b/Frontend/Cantine/src/app/admin/menus/update-menu/update-menu.component.html
@@ -180,7 +180,7 @@
                             <span (click)="goBack()"><mat-icon>arrow_back</mat-icon></span>
 
                             <div class="btn-save right">
-                                <button class="btn"> supprimer</button>
+                                <button class="btn" (click)="removeMenu()"> supprimer</button>
                             </div>
 
                         </div>
