--- a/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
+++ b/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
@@ -44,7 +44,7 @@
 
         <mat-divider></mat-divider>
 
-        <button class="menu-button">
+        <button class="menu-button" (click)="goToMyProfile()">
             <mat-icon>person</mat-icon>
             <span>Profile</span>
         </button>
