--- a/Frontend/Cantine/src/assets/styles/main.component.scss
+++ b/Frontend/Cantine/src/assets/styles/main.component.scss
@@ -18,7 +18,8 @@ mat-toolbar {
   }
 
   img {
-    width: 45px;
+    height: 60px;
+    width: 60px;
     cursor: pointer;
     border-radius: 100%;
   }
