--- a/Frontend/Cantine/src/app/admin/student-management/students-handler/students-handler.component.html
+++ b/Frontend/Cantine/src/app/admin/student-management/students-handler/students-handler.component.html
@@ -75,7 +75,7 @@
 
 <div *ngIf="(students$ | async)?.length; else noStudents">
      <div *ngFor="let student of students$ | async ">
-          <div class="container" (click)="goToStudentProfile(student.id)">
+          <div class="container" (click)="goToStudentProfile(student.uuid)">
                <div class="row">
                     <div class="col-md-2">
                          <span>   Nom :  {{student.lastname}}  </span>
