--- a/Frontend/Cantine/src/app/admin/student-management/students-handler/students-handler.component.html
+++ b/Frontend/Cantine/src/app/admin/student-management/students-handler/students-handler.component.html
@@ -53,7 +53,7 @@
 
 
          <div class="col-md-4">
-             <button class="btn"> voir le  profile</button>
+             <button class="btn" (click)="goToStudentProfile()"> voir le  profile</button>
          </div>
 
 
