send Notification for adding student wallet

--- a/Backend/Cantine/src/main/resources/templates/confirmation-Adding-Amount-Student-wallet.html
+++ b/Backend/Cantine/src/main/resources/templates/confirmation-Adding-Amount-Student-wallet.html
@@ -146,7 +146,7 @@
                                                         </tr>
                                                     </table>
 
-                                                    <p style="color: red;"> si  vous  etes pas à  origine de  cette opération merci de  contacter <span th:txt="${cantineContactNumber}"></span></p>
+                                                    <p style="color: red;"> si  vous  etes pas à  origine de  cette opération merci de  contacter <span th:text="${cantineContactNumber}"></span> </p>
 
                                                     <br> Nous vous Remercions Votre Comprehension<br>
                                                     Cordialement <br>
