--- a/Frontend/Cantine/src/app/admin/student-management/edit-student-wallet-dialog/edit-student-wallet-dialog.component.html
+++ b/Frontend/Cantine/src/app/admin/student-management/edit-student-wallet-dialog/edit-student-wallet-dialog.component.html
@@ -21,7 +21,7 @@
                     </div>
 
                     <div *ngIf="f['amount'].errors['min']" class="center">
-                        Le  Montant   Minimum est  10€
+                        Impossible  de retirer  un montant  inférieur à  200 €
                     </div>
 
                 </div>
