--- a/Frontend/Cantine/src/app/admin/student-management/manage-student-wallet/manage-student.component.html
+++ b/Frontend/Cantine/src/app/admin/student-management/manage-student-wallet/manage-student.component.html
@@ -94,8 +94,8 @@
                 Ajouter   Un  montant
             </button>
             <button class="btn">
-                <mat-icon>remove_circle_outline</mat-icon>
-                Soustraire  Un montant
+                <mat-icon>history</mat-icon>
+                historique des  transactions
             </button>
 
         </div>
